Added user signup API endpoint (swagger). (#889)
